<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/network_type"
        android:text="@string/type_ethernet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/toggle"
        android:text="@string/static_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/ipaddr"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/idaddr" />

    <EditText
        android:id="@+id/gateway"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/gateway" />

    <EditText
        android:id="@+id/netmask"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/netmask" />

    <EditText
        android:id="@+id/dns"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/dns" />

    <EditText
        android:id="@+id/dns2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/dns1" />

    <Button
        android:id="@+id/config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config" />

</LinearLayout>