<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/confirm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:singleLine="true"
        android:text="@string/clickbtn" />

    <EditText
        android:id="@+id/input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/callback" />

    <EditText
        android:id="@+id/callback"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@android:color/white" />

</LinearLayout>